--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,18 @@
-
+.env
+.idea
+.aptos
+.trace
+.coverage_map.mvcov
+.vscode/
+docs/
+build/
 .aptos
 *.yaml
+
+nextjs/
+v1frontend/
+conditional-rendering-react/
+
 
 # Logs
 logs
